<resources>
    <string name="app_name" translatable="false">CO2-</string>
    <string name="welcome_btn" translatable="false">Get Started</string>
    <string name="sign_in_btn" translatable="false">Sign In</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="log_in" translatable="false">Log-in</string>
    <string name="or_sign_in_with" translatable="false">or</string>
    <string name="google" translatable="false">Google</string>
    <string name="email_hint" translatable="false">example@example.com</string>
    <string name="password_hint" translatable="false">******</string>
    <string name="forgot_password" translatable="false"><u>Forgot password?</u></string>
    <string name="sign_up_link" translatable="false">Don\'t have an account? <b><u>Sign Up</u></b></string>
    <string name="today_tasks" translatable="false">Today\'s Tasks</string>
    <string name="library_title" translatable="false">Library</string>
    <string name="library_energy" translatable="false">100</string>
    <string name="bookTitle0" translatable="false">The Carbon Cycle</string>
    <string name="bookTitle1" translatable="false">Trash Travels</string>
    <string name="bookTitle2" translatable="false">CO2 for Kids</string>
    <string name="bookTitle3" translatable="false">Reducing CO2 Footprint</string>
    <string name="search_books" translatable="false">Search...</string>
    <string name="Lesson1" translatable="false">Lesson 1</string>
    <string name="lesson_title" translatable="false">What is a Carbon Footprint?</string>
    <string name="lesson_body" translatable="false">Think of a "footprint" as the mark you leave behind. Your carbon footprint is the total amount of greenhouse gases—primarily carbon dioxide (CO2)—that are released into the atmosphere because of your activities. It\'s a way to measure your personal impact on the environment. Everything we do has a carbon footprint. It includes both direct emissions, like the exhaust from a car you\'re riding in, and indirect emissions, which are the emissions created to produce the goods you use, like the energy used to manufacture your phone. Greenhouse gases, like CO2, trap heat in the Earth\'s atmosphere. This is called the greenhouse effect. A certain amount of this is natural and necessary to keep our planet warm enough for life.</string>
    <string name="lesson_title2" translatable="false">How can you shrink your footprint?</string>
    <string name="lesson_body2" translatable="false">Conserve Energy:Lessen your electricity use.</string>
    <string name="lesson_body3" translatable="false">Travel Smarter:Walk, bike, or use public transportation when possible.</string>
    <string name="lesson_body4" translatable="false">Eat Mindfully: Avoid wasting food.</string>
    <string name="lesson_body5" translatable="false">Reduce, Reuse, Recycle: Think before you buy.</string>
    <string name="next_button" translatable="false">Next</string>
    <string name="notif_title" translatable="false">Now that you’ve learned what a Carbon Footprint is, let’s test your knowledge!</string>
    <string name="question_1" translatable="false">Which among the images classify as an e-waste?</string>
    <string name="question_2" translatable="false">Which of the following activities would have the largest indirect carbon footprint?</string>
    <string name="Q2.C1" translatable="false">Turning on a light in your room.</string>
    <string name="Q2.C2" translatable="false">Riding your bike to a friend\'s house.</string>
    <string name="Q2.C3" translatable="false">Buying a new smartphone that was manufactured and shipped from another country.</string>
    <string name="Q2.C4" translatable="false">Taking a short shower.</string>
    <string name="greeting_true" translatable="false">Congratulations!</string>
    <string name="greeting_false" translatable="false">Try again!</string>
    <string name="return_button" translatable="false">Return to Home</string>
    <string name="tracker_today" translatable="false">Today</string>
    <string name="tracker_week" translatable="false">Week</string>
    <string name="tracker_month" translatable="false">Month</string>
    <string name="tracker_add" translatable="false">+ Add</string>
    <string name="tracker_today_impact" translatable="false">Today\'s Impact</string>
    <string name="tracker_impact_value" translatable="false">8.5 kg CO2</string>
    <string name="tracker_impact_comparison" translatable="false">12\% below yesterday</string>
    <string name="tracker_weekly_title" translatable="false">This Week</string>
    <string name="tracker_weekly_average" translatable="false">Weekly Average: 8.0 kg CO2/day</string>
    <string name="tracker_title" translatable="false">My Carbon Footprint</string>
    <string name="tracker_today_breakdown" translatable="false">Today\'s Breakdown</string>
    <string name="tracker_transport" translatable="false">Transport</string>
    <string name="tracker_shopping" translatable="false">Shopping</string>
    <string name="tracker_energy" translatable="false">Energy</string>
    <string name="tracker_transport_value" translatable="false">3.2 kg</string>
    <string name="tracker_food_value" translatable="false">3.2 kg</string>
    <string name="tracker_shopping_value" translatable="false">3.2 kg</string>
    <string name="tracker_energy_value" translatable="false">3.2 kg</string>
    <string name="tracker_monthly_goal" translatable="false">Monthly Goal</string>
    <string name="tracker_monthly_value" translatable="false">124.8 kg used</string>
    <string name="tracker_monthly_goal_value" translatable="false">150 kg goal</string>
    <string name="tracker_monthly_remaining_value" translatable="false">25.23 kg</string>
    <string name="tracker_monthly_remaining_text" translatable="false">remaining this month</string>
    <string name="tracker_keep_going" translatable="false">Keep Going!</string>
    <string name="tracker_mascot" translatable="false">EL the Motivational Mascot</string>
    <string name="tracker_mon" translatable="false">Mon</string>
    <string name="tracker_tue" translatable="false">Tue</string>
    <string name="tracker_wed" translatable="false">Wed</string>
    <string name="tracker_thu" translatable="false">Thu</string>
    <string name="tracker_fri" translatable="false">Fri</string>
    <string name="tracker_sat" translatable="false">Sat</string>
    <string name="tracker_sun" translatable="false">Sun</string>
    <string name="tracker_mon_value" translatable="false">7.2 kg</string>
    <string name="tracker_tue_value" translatable="false">7.2 kg</string>
    <string name="tracker_wed_value" translatable="false">7.2 kg</string>
    <string name="tracker_thu_value" translatable="false">7.2 kg</string>
    <string name="tracker_fri_value" translatable="false">7.2 kg</string>
    <string name="tracker_sat_value" translatable="false">7.2 kg</string>
    <string name="tracker_sun_value" translatable="false">7.2 kg</string>
    <string name="home_title" translatable="false">Home</string>
    <string name="home_task" translatable="false">Task</string>
    <string name="home_events" translatable="false">Events</string>
    <string name="home_task_title" translatable="false">Today\'s Task</string>
    <string name="home_event_title" translatable="false">Community Events</string>
    <string name="home_event_image_desc" translatable="false">Event Image</string>
    <string name="home_welcome" translatable="false">Welcome Back,</string>
    <string name="home_username" translatable="false">Username!</string>
    <string name="home_user_image" translatable="false">User Image</string>
    <string name="nav_home" translatable="false">Home</string>
    <string name="nav_book" translatable="false">Book</string>
    <string name="nav_calc" translatable="false">Calculator</string>
    <string name="nav_bag" translatable="false">Bag</string>
    <string name="userProfile" translatable="false">User Profile</string>
    <string name="cd_home_events" translatable="false">View community events</string>
    <string name="task_0_image" translatable="false">User Profile</string>
    <string name="task_1_image" translatable="false">User Profile</string>
    <string name="task_2_image" translatable="false">User Profile</string>
    <string name="energy_icon" translatable="false">Energy Icon</string>
    <string name="lib_book_0" translatable="false">Book 0</string>
    <string name="lib_book_1" translatable="false">Book 1</string>
    <string name="lib_book_2" translatable="false">Book 2</string>
    <string name="lib_book_3" translatable="false">Book 3</string>
    <string name="task_0" translatable="false">"Read and take a quiz on the app\'s library"</string>
    <string name="task_1" translatable="false">Declutter e-waste in your house.</string>
    <string name="task_2" translatable="false">Walk 10,000 steps today</string>
    <string name="home_done_button" translatable="false">Done</string>
    <string name="aqua_points_title" translatable="false">Aqua Points</string>
    <string name="price" translatable="false">100</string>
    <string name="blue" translatable="false">Blue Shirt</string>
    <string name="green" translatable="false">Green Shirt</string>
    <string name="fedora" translatable="false">Fedora Hat</string>
    <string name="grey" translatable="false">Grey Polo Shirt</string>
    <string name="lightpink" translatable="false">Pink Polo Shirt</string>
    <string name="bibe" translatable="false">Duck Hair Clip"</string>
    <string name="earn_more" translatable="false">Earn More</string>
    <string name="start" translatable="false">Start</string>
    <string name="take_a_quiz" translatable="false">Take a Quiz</string>
    <string name="take_a_quiz_label" translatable="false">Take\na Quiz</string>
    <string name="finish_daily_tasks" translatable="false">Finish Daily Tasks</string>
    <string name="finish_daily_tasks_label" translatable="false">Finish\nDaily Tasks</string>
    <string name="input_footprint" translatable="false">Input Footprint</string>
    <string name="input_footprint_label" translatable="false">Input\nFootprint</string>
    <string name="aqua_points" translatable="false">My Aqua Points</string>
    <string name="aqua99" translatable="false">99</string>
    <string name="redeem" translatable="false">Redeem</string>
    <string name="customize" translatable="false">Customize</string>
    <string name="done" translatable="false">Done</string>
    <string name="add_footprint_title" translatable="false">Add New Footprint</string>
    <string name="add_footprint_hint_activity" translatable="false">Activity Name (e.g., Drove to work)</string>
    <string name="add_footprint_hint_amount" translatable="false">Amount (e.g., miles, kWh)</string>
    <string name="add_footprint_category_title" translatable="false">Category</string>
    <string name="add_footprint_button" translatable="false">Add Entry</string>
    <string name="default_web_client_id">935965368269-k3f3injcogoqta2e02ban1js3qcj2tar.apps.googleusercontent.com</string>
    <string name="view_map" translatable="false">>Map</string>
    <string name="onboarding_greeting" translatable="false"> Let\'s get you started! </string>
    <string name="name_input" translatable="false"> Name </string>
    <string name="dob_input" translatable="false"> Date of Birth </string>
    <string name="email_input" translatable="false"> Email Address </string>
    <string name="password_input" translatable="false"> Password </string>
    <string name="create_button" translatable="false"> Create Account </string>
    <string name="sample_name" translatable="false"> Juan Dela Cruz </string>
    <string name="sample_dob" translatable="false"> 01/01/2000 </string>
    <string name="sample_email" translatable="false"> who1@examplepetstore.com </string>
</resources>