<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">
    <com.google.android.material.card.MaterialCardView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    app:cardCornerRadius="16dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_footprint_title"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_activity_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_footprint_hint_activity" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_footprint_hint_amount"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/add_footprint_category_title"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_transport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracker_transport"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracker_food"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracker_energy"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracker_shopping"
                style="@style/Widget.MaterialComponents.Chip.Choice"/>

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/button_save_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingVertical="12dp"
            android:backgroundTint="@color/button_blue"
            android:fontFamily="@font/montserrat"
            android:text="@string/add_footprint_button"
            app:cornerRadius="20dp" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>